one time add online station list to events through a post route
